--- a/work/fifth/index.html
+++ b/work/fifth/index.html
@@ -90,6 +90,21 @@
       // ・セレクトボックスをクリックする。
       // ・セレクトボックスのvalueとliのdata-category-typeが一致しているものをだけ表示させる。
       // ・Allを選択した場合のみ全てのliを表示させる。
+      $(".select").change(function(){
+        var v=$(this).val();
+        if(v == "all"){
+          $(".list").find("li").show();
+        }else {
+          $(".list").find("li").each(function(){
+            if($(this).data("category-type")==v){
+              $(this).show(); 
+            } else {
+              $(this).hide();
+            }
+          });
+        }
+      });
+        
       // [使うメソッド]
       // .show() 要素を表示させる
       // .hide() 要素を隠す
