--- a/work/second/index.html
+++ b/work/second/index.html
@@ -21,15 +21,17 @@
     </div>
     <script src="../../common/js/jquery.js"></script>
     <script>
+      $(function(){
+        $(".modal-show").click(function(){
+          $(".modal").fadeIn();
+        });
+        $(".modal-close").click(function(){
+          $(".modal").fadeOut();
+        });
+      });
       // 今回やるのはモーダルです。
       // .modal-show をクリックすることで .modal をfadeInさせる。
-      $(".modal-show").click(function(){
-        $(".modal").fadeIn();
-      });
       // .modal-close をクリックで .modal をfadeOutさせる。
-      $(".modal-close").click(function(){
-        $(".modal").fadeOut();
-      });
       // .click() クリック時のイベントを登録する。
       // .fadeIn() 一定時間かけてフェードインする。
       // .fadeOut() 一定時間かけてフェードアウトする。
